force-app/main/default/objects/Case/fields/CaseName__c.field-meta.xml
<CustomField>
    <fullName>CaseName__c</fullName>
    <formula>Account.Name + &apos; - &apos; + First_inspection_Type__c + &apos; - &apos; +  InspectionAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>