force-app/main/default/objects/Case/fields/Desired_inspection_start__c.field-meta.xml
<CustomField>
    <fullName>Desired_inspection_start__c</fullName>
    <label>Desired inspection start</label>
    <type>DateTime</type>
</CustomField>