force-app/main/default/objects/Case/fields/ExperienceUrl__c.field-meta.xml
<CustomField>
    <fullName>ExperienceUrl__c</fullName>
    <formula>&apos;https://gmailcomiv-dev-ed.develop.my.site.com/s/case/&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Url</label>
    <type>Text</type>
</CustomField>