force-app/main/default/objects/Case/fields/First_inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>First_inspection_Type__c</fullName>
    <description>to provide ability to work with formulas - we will use trigger code to take first selected value from inspection types (multi-picklist)</description>
    <label>First inspection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>