force-app/main/default/objects/Case/fields/Inspection_Types__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Types__c</fullName>
    <label>Inspection Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materials quality inspection</fullName>
            </value>
            <value>
                <fullName>Materials storage inspection</fullName>
            </value>
            <value>
                <fullName>Equipment inspection</fullName>
            </value>
            <value>
                <fullName>Manufacture process inspection</fullName>
            </value>
            <value>
                <fullName>Outcome count inspection</fullName>
            </value>
            <value>
                <fullName>Outcome quality inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>