force-app/main/default/objects/Case/fields/InspectionAddress__c.field-meta.xml
<CustomField>
    <fullName>InspectionAddress__c</fullName>
    <label>Inspection Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>