force-app/main/default/objects/Case/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <label>Manufacture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>South 1</fullName>
            </value>
            <value>
                <fullName>South 2</fullName>
            </value>
            <value>
                <fullName>South 3</fullName>
            </value>
            <value>
                <fullName>North 1</fullName>
            </value>
            <value>
                <fullName>North-west 1</fullName>
            </value>
            <value>
                <fullName>Western 1</fullName>
            </value>
            <value>
                <fullName>East 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>