force-app/main/default/objects/Case/fields/NextActor__c.field-meta.xml
<CustomField>
    <fullName>NextActor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>