force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andalusia</fullName>
            </value>
            <value>
                <fullName>Aragon</fullName>
            </value>
            <value>
                <fullName>Asturias</fullName>
            </value>
            <value>
                <fullName>Balearic Islands</fullName>
            </value>
            <value>
                <fullName>Basque Country</fullName>
            </value>
            <value>
                <fullName>Canary Islands</fullName>
            </value>
            <value>
                <fullName>Cantabria</fullName>
            </value>
            <value>
                <fullName>Castile and Leon</fullName>
            </value>
            <value>
                <fullName>Castilla–La Mancha</fullName>
            </value>
            <value>
                <fullName>Catalonia</fullName>
            </value>
            <value>
                <fullName>Extremadura</fullName>
            </value>
            <value>
                <fullName>Galicia</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Murcia</fullName>
            </value>
            <value>
                <fullName>Navarre</fullName>
            </value>
            <value>
                <fullName>Valencia</fullName>
            </value>
            <value>
                <fullName>East</fullName>
                <isActive>false</isActive>
                <label>East</label>
            </value>
            <value>
                <fullName>North</fullName>
                <isActive>false</isActive>
                <label>North</label>
            </value>
            <value>
                <fullName>South</fullName>
                <isActive>false</isActive>
                <label>South</label>
            </value>
            <value>
                <fullName>West</fullName>
                <isActive>false</isActive>
                <label>West</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>