force-app/main/default/objects/Case/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IF(
AND(ISPICKVAL(Status, &apos;New&apos;), OwnerId = $User.Id), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Attention required&quot;),
IF(ISPICKVAL(Status, &apos;Working&apos;), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;working as usual&quot;), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>