force-app/main/default/objects/Case/fields/StatusIconLWC__c.field-meta.xml
<CustomField>
    <fullName>StatusIconLWC__c</fullName>
    <formula>IF(NextActor__c = $User.Id,&quot;action:defer&quot;,
IF(OR(ISPICKVAL(Status, &apos;Working&apos;), ISPICKVAL(Status, &apos;Submitted&apos;), ISPICKVAL(Status, &apos;Approved&apos;)), &quot;action:approval&quot;, &quot;action:more&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon LWC</label>
    <type>Text</type>
</CustomField>