force-app/main/default/objects/Case/recordTypes/Generators_support.recordType-meta.xml
<RecordType>
    <fullName>Generators_support</fullName>
    <active>true</active>
    <businessProcess>Generatordss support process</businessProcess>
    <label>Generators support</label>
</RecordType>